2000-06-07  Radek Doulik  <rodo@helixcode.com>

        * everywhere changed to use new colorsets
	
	* htmlsettings.c: colors part rewritten to use new colorsets

	* htmlcolorset.c: rewritten, now we have master colorset in engine
	and slave colorsets in painters
	colors are set by default to colors from GtkHTML widget style

	* gtkhtml.c (gtk_html_construct): fixed engine widget setting

	* htmlengine.c (html_engine_class_init): added arg html
	(html_engine_set_arg): new handler
	(html_engine_new): update to use new arg

	* htmlgdkpainter.c (draw_panel): updated to display better limit cases

2000-06-06  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (html_engine_get_object_at): correct also x
	coordinate when y < e->topBorder

	* htmlclueflow.c (check_point): corrected bounding condition - now
	you don't loose selection by moving mouse above gtkhtml area

2000-06-05  Radek Doulik  <rodo@helixcode.com>

	* htmltextmaster.c (html_text_master_magic_link): stop search also
	on spaces
	updated regex for mailto:, also remove A-Z as we ICASE

	* htmllinktextmaster.c (html_link_text_master_to_text): new
	function used to replace link by normal text

	* htmlengine-edit-paste.c (html_engine_replace_by_object):
	replaces region by new_obj (used from magic links/remove link)

	* htmltextmaster.c (html_text_master_magic_link): rewritten using regex
	(html_engine_init_magic): magic links initializations - compiles regexps

2000-06-04  Ariel Rios  <ariel@arcavia.com>

	* htmlengine-edit-table.h: (html_engine_create_table) Added proto.

	* htmlengine-edit-table.c (html_engine_create_table): Create and return a new table.
	(html_engine_insert_table) We now create the table and add rows and cols as required.
	Still need to find a good way to send the cell parameters.

2000-06-03  Ariel Rios  <ariel@arcavia.com>

	* htmlengine-edit-table.c: New file needed to add table editing capabilities.
	(html_engine_insert_table): Creates a new table and paste it.	